--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon index.js",
     "start": "node index.js",
-    "build": "echo 'No build step needed for nodemon'"
+    "build": "cp -r src/* public/"
   },
   "keywords": [],
   "author": "",
