--- a/package.json
+++ b/package.json
@@ -23,11 +23,13 @@
     "moment": "^2.29.4",
     "mssql": "^10.0.1",
     "multer": "^1.4.5-lts.1",
-    "nodemon": "^3.0.2",
     "path": "^0.12.7",
     "qrcode": "^1.5.3",
     "sequelize": "^6.35.2",
     "sequelize-cli": "^6.6.2",
     "slugify": "^1.6.6"
+  },
+  "devDependencies": {
+    "nodemon": "^3.0.2"
   }
 }
