--- a/.env
+++ b/.env
@@ -5,7 +5,7 @@ DB_DATABASE="test"
 
 PORT = 443
 
-DOMAIN_SERVER = "https://qr-code-backend-pi.vercel.app"
+DOMAIN_SERVER = "https://qr-code-backend-tan.vercel.app/"
 DOMAIN_CLIENT = "https://qr-code-client.vercel.app"
 
 DOMAIN_CLIENT_IP = "http://192.168.1.104:3000"
